--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "express-fileupload": "^1.1.3-alpha.1",
     "express-mongo-db": "^2.0.4",
     "mongodb": "^3.1.13",
     "perm": "^1.0.0",
